Added javadoc comments and tided thing up a little

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 		<servlet-name>Post</servlet-name>
 		<url-pattern>/Post</url-pattern>
 	</servlet-mapping>
-<!-- 	<welcome-file-list>
-		<welcome-file>Home.jsp</welcome-file>
-	</welcome-file-list> -->
-</web-app>
+<!--  	<welcome-file-list>
+		<welcome-file>Post</welcome-file>
+	</welcome-file-list> 
+ --></web-app>
