Tidied things up
Made possible to pick time zone, to see year of update, to delete
updates that are pending and to pick from drop-down what to parse.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -51,6 +51,15 @@
 		<servlet-name>Post</servlet-name>
 		<url-pattern>/Post</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>DeletePending</servlet-name>
+		<servlet-class>ro.project.servlet.DeletePendingQuoteServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeletePending</servlet-name>
+		<url-pattern>/DeletePending</url-pattern>
+	</servlet-mapping>
+	
 <!--  	<welcome-file-list>
 		<welcome-file>Post</welcome-file>
 	</welcome-file-list> 
