--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ParserProject</groupId>
-	<artifactId>ParserProject</artifactId>
+	<groupId>SocialMediaScheduler</groupId>
+	<artifactId>SocialMediaScheduler</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
@@ -20,6 +20,11 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20090211</version>
+		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
 		</dependency>
 		<!-- <dependency> <groupId>com.googlecode.json-simple</groupId> <artifactId>json-simple</artifactId> 
 			<version>1.1.1</version> <scope>provided</scope> </dependency> -->
