--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -77,6 +77,16 @@
 		<url-pattern>/AccessToken</url-pattern>
 	</servlet-mapping>
 
+
+	<servlet>
+		<servlet-name>SearchServlet</servlet-name>
+		<servlet-class>ro.project.servlet.SearchServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SearchServlet</servlet-name>
+		<url-pattern>/search</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>Home.jsp</welcome-file>
 	</welcome-file-list>
