--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -77,7 +77,6 @@
 		<url-pattern>/AccessToken</url-pattern>
 	</servlet-mapping>
 
-
 	<servlet>
 		<servlet-name>SearchServlet</servlet-name>
 		<servlet-class>ro.project.servlet.SearchServlet</servlet-class>
@@ -90,4 +89,21 @@
 	<welcome-file-list>
 		<welcome-file>Home.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<!-- <context-param>
+		<param-name>path</param-name>
+		<param-value>D:\\\\workspace\\\\SocialMediaScheduler\\\\src\\\\main\\\\resources\\\\quotes</param-value>
+	</context-param>
+	<context-param>
+		<param-name>path2</param-name>
+		<param-value>D:/workspace/SocialMediaScheduler/src/main/resources/quotes/</param-value>
+	</context-param> -->
+	<context-param>
+		<param-name>path</param-name>
+		<param-value>C:\\\\Tomcat\\\\apache-tomcat-7.0.59\\\\webapps\\\\quotes</param-value>
+	</context-param>
+	<context-param>
+		<param-name>path2</param-name>
+		<param-value>C:/Tomcat/apache-tomcat-7.0.59/webapps/quotes/</param-value>
+	</context-param>
 </web-app>
