Removed unnecessary path in web.xml

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -67,67 +67,8 @@
 		<param-name>path2</param-name> 
 		<param-value>C:/Tomcat/apache-tomcat-7.0.59/webapps/</param-value> 
 	</context-param> 
-	<context-param> 
+	<!-- <context-param> 
 		<param-name>path</param-name> 
 		<param-value>C:\\\\Tomcat\\\\apache-tomcat-7.0.59\\\\webapps\\\\</param-value> 
-	</context-param>
+	</context-param> -->
 </web-app>
-	
-	<!-- <servlet>
-		<servlet-name>Pending</servlet-name>
-		<servlet-class>ro.project.servlet.PendingQuotesServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Pending</servlet-name>
-		<url-pattern>/PendingQuotes</url-pattern>
-	</servlet-mapping>
-
-		<servlet>
-		<servlet-name>DeletePending</servlet-name>
-	<servlet-class>ro.project.servlet.DeletePendingQuoteServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>DeletePending</servlet-name>
-		<url-pattern>/DeletePending</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>SearchServlet</servlet-name>
-		<servlet-class>ro.project.servlet.SearchServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>SearchServlet</servlet-name>
-		<url-pattern>/search</url-pattern>
-	</servlet-mapping>
-		<servlet>
-		<servlet-name>Parse</servlet-name>
-		<servlet-class>ro.project.servlet.ParseWebsiteServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Parse</servlet-name>
-		<url-pattern>/ParseWebsite</url-pattern>
-	</servlet-mapping>
-	
-	<servlet>
-		<servlet-name>Post</servlet-name>
-		<servlet-class>ro.project.servlet.PostToSocialMediaServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Post</servlet-name>
-		<url-pattern>/Post</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>PaginationServlet</servlet-name>
-		<servlet-class>ro.project.servlet.PaginationServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>PaginationServlet</servlet-name>
-		<url-pattern>/QuoteHistory</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>Hello</servlet-name>
-		<servlet-class>ro.project.servlet.SocialMediaServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Hello</servlet-name>
-		<url-pattern>/HelloServlet</url-pattern>
-	</servlet-mapping>-->
