--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -55,13 +55,16 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>AccessToken</servlet-name>
+		<url-pattern>/Updates</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AccessToken</servlet-name>
 		<url-pattern>/HelloServlet</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>AccessToken</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
 
 	<context-param>
 		<param-name>path2</param-name>
